# marketplace-retrieval-ranking

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: default.yaml
docs/: phase0.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md
notebooks/: phase7_ab_evaluation.ipynb
scripts/: 01_build_dataset.py  02_eval_smoke_test.py  03_build_catalog_queries.py  04_train_eval_tfidf.py  05_train_eval_dual_encoder.py  06_faiss_retrieval_benchmark.py  07_personalization_eval.py  08_two_stage_reranking.py  09_constrained_explore_exploit.py  10_offline_ab_simulation.py
src/marketplace_search/: __init__.py
src/marketplace_search.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/marketplace_search/common/: config.py  hashing.py  logging_schema.py
src/marketplace_search/eval/: harness.py  metrics.py  query_harness.py  system_metrics.py
src/marketplace_search/experimentation/: __init__.py  ab_simulation.py
src/marketplace_search/retrieval/: __init__.py  dual_encoder.py  faiss_retrieval.py  personalization.py  reranker.py  tfidf.py
tests/: test_dual_encoder_phase2.py  test_faiss_phase3.py  test_metrics.py  test_personalization_phase4.py  test_phase1.py  test_phase6_constrained_explore_exploit.py  test_phase7_ab_simulation.py  test_reranker_phase5.py  test_splits_labels.py
